Добавлены тесты (ДЗ 5)